# jordanopotato-rust

./: .gitignore  Cargo.toml  README.md  long_chat_test.sh  output.txt
src/: db.rs  main.rs  models.rs
src/routes/: chat.rs  mod.rs  user.rs
src/static/: questions.json
tests/: db_tests.rs  server_tests.rs
